# feduciary

./: .gitignore  LICENSE  README.md  flowersim.py  main.py  plot_varag.py  pyproject.toml  requirements.txt
conf/: config.yaml  config_b.yaml  config_c.yaml  debug_config.yaml  flowerconfig.yaml  old_default.yaml  sandbox_config.yaml
conf/client/: base.yaml  baseflower.yaml  fedgradstd.yaml  fedstdev.yaml  varagg.yaml
conf/dataset/: bloodmnist.yaml  cifar10.yaml  fedisic.yaml
conf/hydra/: custom.yaml
conf/model/: resnet10.yaml  resnet10gn.yaml  resnet18.yaml  resnet18gn.yaml  resnet34.yaml  resnet34gn.yaml  twocnn.yaml
conf/server/: baseflower.yaml  cgsv.yaml  fedavg.yaml  fedstdev.yaml  varagg.yaml
conf/strategy/: base.yaml  cgsv.yaml  fedavgmanual.yaml  fedgradstd.yaml  fedopt.yaml  fedstdev.yaml
docs/source/: conf.py  index.rst
scripts/: classificiation_iris_toy_problem.ipynb  flowersim.py  plot_distribution.py  plot_varag.py  regression_toy_problem_bnn.ipynb  toy_trainer.py
src/: config.py  data.py  postprocess.py  simulator.py  split.py  utils.py
src/client/: __init__.py  abcclient.py  baseclient.py  baseflowerclient.py  cgsvclient.py  fedavgclient.py  fedproxclient.py  fedsgdclient.py  fedstdevclient.py  varaggclient.py
src/common/: typing.py  utils.py
src/datasets/: __init__.py  beerreviews.py  cover.py  flamby.py  gleam.py  leafparser.py  torchtextparser.py  torchvisionparser.py
src/feduciary/: config.py  data.py  simulator.py  split.py
tests/: test_datasets.py  test_fedavg.py  test_flower_and_native.py  test_simulator.py  test_utils.py
(+86 files in other folders)
